tests/compile_pass/public_headers/runtime_sequential.cpp
#include <pb/runtime/sequential.hpp>

int pb_public_header_runtime_sequential() { return 0; }
